# Spider-Mail

./: .gitignore  CMakeLists.txt  Dockerfile.main  Dockerfile.node  Dockerfile.react  Makefile  README.md  docker-compose.yml  nginx.conf  package-lock.json
android-client/: gradle.properties  settings.gradle.kts
android-client/app/: build.gradle.kts
android-client/app/src/main/: AndroidManifest.xml
android-client/gradle/: libs.versions.toml
android-client/gradle/wrapper/: gradle-wrapper.properties
foomail/: package-lock.json  package.json
foomail/public/: index.html
foomail/src/: App.css  App.js  index.js
foomail/src/components/AttachmentControls/: AttachmentControls.css  AttachmentControls.js
foomail/src/components/AttachmentList/: AttachmentList.css  (+1 more)
foomail/src/context/: AuthContext.js  ComposeContext.js  MailSchedulerContext.js  SidebarContext.js  ThemeContext.js
foomail/src/pages/: ViewSingleMail.module.css  home.js  home.module.css  inbox.js  inbox.module.css  login.js  signup.js  view_single_mail.js
foomail/src/services/: authService.js  composeService.js  labels.js  mail.js  signupService.js  userService.js
foomail/src/utils/: authUtils.js  dateUtils.js  fileUtils.js  formSendMail.js  jwtUtils.js  time.js  toUtils.js
src/: Delete_url.cpp  Delete_url.h  FileStorage.cpp  FileStorage.h  Get_url.cpp  Get_url.h  HashFunction0.cpp  HashFunction0.h  ICommand.h  IDataStorage.h  IHashFunction.h  InputHandler.cpp  InputHandler.h  MongoStorage.cpp  MongoStorage.h  Post_url.cpp  Post_url.h  Server.cpp  bloom_filter.cpp  bloom_filter.h  bloom_filter_commands.cpp  bloom_filter_commands.h  client.py
src/foo/: app.js  package-lock.json  package.json
src/foo/config/: .env
src/foo/controllers/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/foo/models/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/foo/routes/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/foo/services/: labels.js  mails.js  users.js
tests/: server_test.cpp  test.cpp
wiki/: Compose-Mail.md  Header.md  Home-Page.md  Inbox.md  Login-Page.md  Run-Environment.md  Sidebar.md  Sign-Up-Page.md  Single-Mail-View.md
(+86 files in other folders)
